adding files for github pages

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mosnster-database",
+  "name": "cat-database",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://vikashAppBrewery.github.io/cat-database",
